--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ p {
 }
 
 .card {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.88);
   padding: 40px;
   box-shadow: 0px 10px 30px rgb(0 0 0 / 20%);
   border-radius: 4px;
