--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 body {
-  background-image: url('../profile/images/spiderpig.jpeg');
+  background-image: url('images/spiderpig.jpeg');
 
   font-family: 'Roboto Slab', serif;
   font-size: 16px;
